<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DevicesActivity">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/ConnectedDevices"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="228dp"
            android:text="@string/AvailableDevices"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
            android:id="@+id/button"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/d_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
            android:id="@+id/button2"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/d_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
            android:id="@+id/button3"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/d_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
            android:id="@+id/ad_5"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/d_n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ad_4" />

    <Button
            android:id="@+id/ad_1"
            android:layout_width="333dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:text="@string/ad_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
            android:id="@+id/ad_2"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/ad_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ad_1" />

    <Button
            android:id="@+id/ad_3"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/ad_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ad_2" />

    <Button
            android:id="@+id/ad_4"
            android:layout_width="333dp"
            android:layout_height="51dp"
            android:layout_marginTop="8dp"
            android:text="@string/ad_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ad_3" />


</androidx.constraintlayout.widget.ConstraintLayout>